--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,1 +1,1 @@
-wget https://nmdl.ir/download_Out/=test/Ankabute.Moghadas.1080.mkv
+!wget https://nmdl.ir/download_Out/=test/Ankabute.Moghadas.1080.mkv
