--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,20 @@
-wget htt- task: PythonScript@0
+trigger:
+- main
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+steps:
+- task: UsePythonVersion@0
   inputs:
-    scriptSource: 'filePath'
-    scriptPath: '1'://nmdl.ir/download_Out/=test/Air.Raid.Wardens.1943.Duble.Tinyz.mkv
+    versionSpec: '3.x'
+    addToPath: true
+
+- script: |
+    sudo apt-get update
+    sudo apt-get install -y aria2  # نصب ابزار aria2
+    python -m venv env
+    source env/bin/activate
+    pip install requests
+    python aria2_server.py  # اجرای اسکریپت
+  displayName: 'Run Aria2 Server'
